--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.jpa.hibernate.naming.strategy=org.hibernate.cfg.ImprovedNamingStrategy
 spring.datasource.url=jdbc:mysql://localhost:3306/test
 spring.sql.init.mode=always
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.datasource.username=root
 spring.datasource.password=admin
 spring.h2.console.enabled=true
